--- a/index.html
+++ b/index.html
@@ -5,30 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="/">WebStudio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <!--Шапка сайта-->
+    <header class="header">
+        <nav class="header-nav">
+            <a href="/" class="header-logo">Web Studio</a>
+            <ul class="header-menu">
+                <li class="header-link"><a href="">Студия</a></li>
+                <li class="header-link"><a href="">Портфолио</a></li>
+                <li class="header-link"><a href="">Контакты</a></li>
             </ul>            
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href=tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact-list">
+            <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact" href=tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button class="hero-btn" type="button">Заказать услугу</button>
         </section>
     </main>
     <section>
-        <ul>
+        <ul class="">
             <li>
                 <h3>Внимание к деталям</h3>
                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -49,7 +51,7 @@
     </section>
     <section>        
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
             <li>
                 <img src="./images/photo1-min.jpg"
                 alt="программирование"
@@ -73,7 +75,7 @@
     </section>
     <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="list">
         
             <li>
                 <img src="./images/person1-min.jpg"
@@ -111,7 +113,7 @@
     </section>
     <footer>
         <address>
-            <ul>                
+            <ul class="list">                
                     <a href="/">WebStudio</a>                
                 <li>
                     <a 
