--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!------------------HEADER------------------>
     <header class="header">
         <nav class="header-nav">
-            <a class="link header-logo" href="/" class="header-logo">WebStudio</a>
+            <a class="link header-logo" href="/" class="header-logo">Web</span>Studio</span></a>
             <ul class="list header-menu">
                 <li class="header-item"><a class="link header-link" href="">Студия</a></li>
                 <li class="header-item"><a class="link header-link" href="./porfolio.html">Портфолио</a></li>
