--- a/porfolio.html
+++ b/porfolio.html
@@ -5,118 +5,123 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/porfolio.css">
 </head>
-<header>
+<header class="header">
         <nav class="header-nav">
-            <a href="/" class="header-logo">Web Studio</a>
-            <ul class="header-menu">
-                <li class="header-link"><a href="">Студия</a></li>
-                <li class="header-link"><a href="">Портфолио</a></li>
-                <li class="header-link"><a href="">Контакты</a></li>
+            <a href="/" class="link header-logo">Web Studio</a>
+            <ul class="list header-menu">
+                <li class="header-link"><a class="link header-btn" href="">Студия</a></li>
+                <li class="header-link"><a class="link header-btn" href="">Портфолио</a></li>
+                <li class="header-link"><a class="link header-btn" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="contact-list">
-            <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact" href=tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="list header-list-contact">
+            <li class="header-con-link"><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-con-link"><a class="link header-tel" href=link tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
 </header>
-<section>
-    <button type="button">Все</button>
-    <button type="button">Веб-сайты</button>
-    <button type="button">Приложения</button>
-    <button type="button">Дизайн</button> 
-    <button type="button">Маркетинг</button>
+<section class="button">
+    <button class="button-menu" type="button">Все</button>
+    <button class="button-menu" type="button">Веб-сайты</button>
+    <button class="button-menu" type="button">Приложения</button>
+    <button class="button-menu" type="button">Дизайн</button> 
+    <button class="button-menu" type="button">Маркетинг</button>
 
 </section>
-<section>
-    <ul>
-        <li>
+<section class="portfolio">
+    <ul class="list portfolio-list">
+        <li class="portfolio-item">
             <img src="./images/job1.png" 
             alt="веб-сайт"
             width="370"
             height="294">
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="portfolio-title">Технокряк</h3>
+            <p class="portfolio-per">Веб-сайт</p>
         </li>
-        <li>
+        <li class="portfolio-item">
             <img src="./images/job2.png"
             alt="Дизайн" 
             width="370" 
             height="294">
-            <h3 lang="en">Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="portfolio-title" lang="en">Постер New Orlean vs Golden Star</h3>
+            <p class="portfolio-per">Дизайн</p>
         </li>
-        <li>
+        <li class="portfolio-item">
             <img src="./images/job3.png" 
             alt="ресторан" 
             width="370" 
             height="294">
-            <h3 lang="en">Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-title" lang="en">Ресторан Seafood</h3>
+            <p class="portfolio-per">Приложение</p>
         </li>
-        <li>
+        <li class="portfolio-item">
             <img src="./images/job4.png" 
             alt="проект" 
             width="370" 
             height="294">
-            <h3 lang="en">Проект Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="portfolio-title" lang="en">Проект Prime</h3>
+            <p class="portfolio-per">Маркетинг</p>
         </li>
-        <li>
+        <li class="portfolio-item">
             <img src="./images/job5.png" 
             alt="проект" 
             width="370" 
             height="294">
-            <h3 lang="en">Проект Boxes</h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-title" lang="en">Проект Boxes</h3>
+            <p class="portfolio-per">Приложение</p>
         </li>
-        <li>
+        <li class="portfolio-item">
             <img src="./images/job6.png" 
             alt="веб-сайт" 
             width="370" 
             height="294">
-            <h3 lang="en">Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="portfolio-title" lang="en">Inspiration has no Borders</h3>
+            <p class="portfolio-per">Веб-сайт</p>
         </li>
-        <li>
+        <li class="portfolio-item">
             <img src="./images/job7.png" 
             alt="издание" 
             width="370" 
             height="294">
-            <h3 lang="en">Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="portfolio-title" lang="en">Издание Limited Edition</h3>
+            <p class="portfolio-per">Дизайн</p>
         </li>
-        <li>
+        <li class="portfolio-item">
             <img src="./images/job8.png" 
             alt="проект" 
             width="370" 
             height="294">
-            <h3 lang="en">Проект LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="portfolio-title" lang="en">Проект LAB</h3>
+            <p class="portfolio-per">Маркетинг</p>
         </li>
-        <li>
+        <li class="portfolio-item">
             <img src="./images/job9.png" 
             alt="приложение"
              width="370" 
             height="294">
-            <h3 lang="en">Growing Business</h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-title" lang="en">Growing Business</h3>
+            <p class="portfolio-per">Приложение</p>
         </li>
     </ul>
 </section>
-<footer>
-    <address>
-        <ul class="list">
-            <a href="/">WebStudio</a>
-            <li>
-                <a href="https://goo.gl/maps/559JVEKqnvfDjo5R9" target="_blank" rel="noopener noreferrer">
+<footer class="footer-address">
+    <address class="address">
+        <ul class="list footer-list">
+            <a class="link footer-logo"  href="/">WebStudio</a>
+            <li class="footer-item">
+                <a class="link footer-address" href="https://goo.gl/maps/559JVEKqnvfDjo5R9" target="_blank" rel="noopener noreferrer">
                     г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li>
-                <a href="mailto:info@example.com">info@example.com</a>
+            <li class="footer-item">
+                <a class="link" href="mailto:info@example.com">info@example.com</a>
             </li>
-            <li>
-                <a href=tel:+380991111111">+38 099 111 11 11</a>
+            <li class="link footer-mail">
+                <a class="link footer-tel" href=tel:+380991111111">+38 099 111 11 11</a>
             </li>
         </ul>
     </address>
