--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <!------------------HEADER------------------>
     <header class="header">
         <nav class="header-nav">
-            <a class="link header-logo" href="/" class="header-logo">Web</span>Studio</span></a>
+            <a class="link header-logo" href="/" class="header-logo">
+            <span lang="en" class="header-logo-web">Web</span>
+            <span lang="en" class="header-logo-studio">Studio</span>
+        </a>
             <ul class="list header-menu">
                 <li class="header-item"><a class="link header-link" href="">Студия</a></li>
                 <li class="header-item"><a class="link header-link" href="./porfolio.html">Портфолио</a></li>
@@ -122,7 +125,10 @@
     <footer class="footer-address">
         <address class="address">
             <ul class="list footer-list">                
-                    <a class="link footer-logo" href="/">WebStudio</a>                
+                    <a class="link footer-logo" href="/">
+                         <span lang="en" class="footer-logo-web">Web</span>
+                         <span lang="en" class="footer-logo-studio">Studio</span>
+                    </a>                
                 <li class="footer-item">
                     <a class="link footer-address" 
                     href="https://goo.gl/maps/559JVEKqnvfDjo5R9"
