--- a/porfolio.html
+++ b/porfolio.html
@@ -13,7 +13,10 @@
 </head>
 <header class="header">
         <nav class="header-nav">
-            <a href="/" class="link header-logo">Web Studio</a>
+            <a href="/" class="link header-logo">
+                <span lang="en" class="header-logo-web">Web</span>
+                <span lang="en" class="header-logo-studio">Studio</span>
+            </a>
             <ul class="list header-menu">
                 <li class="header-link"><a class="link header-btn" href="">Студия</a></li>
                 <li class="header-link"><a class="link header-btn" href="">Портфолио</a></li>
@@ -26,101 +29,93 @@
         </ul>
 </header>
 <section class="button">
-    <button class="button-menu" type="button">Все</button>
-    <button class="button-menu" type="button">Веб-сайты</button>
-    <button class="button-menu" type="button">Приложения</button>
-    <button class="button-menu" type="button">Дизайн</button> 
-    <button class="button-menu" type="button">Маркетинг</button>
+    
 
 </section>
+<main>
 <section class="portfolio">
+    <ul class="list portfolio-list-btn">
+        <li class="portfolio-btn">
+            <button class="button-menu" type="button">Все</button>
+        </li>
+        <li class="portfolio-btn">
+            <button class="button-menu" type="button">Веб-сайты</button>
+        </li>
+        <li class="portfolio-btn">
+            <button class="button-menu" type="button">Приложения</button>
+        </li>
+        <li class="portfolio-btn">
+            <button class="button-menu" type="button">Дизайн</button>
+        </li>
+        <li class="portfolio-btn">
+            <button class="button-menu" type="button">Маркетинг</button>
+        </li>
+    </ul>
     <ul class="list portfolio-list">
         <li class="portfolio-item">
-            <img src="./images/job1.png" 
-            alt="веб-сайт"
-            width="370"
-            height="294">
+            <img src="./images/job1.png" alt="веб-сайт" width="370" height="294">
             <h3 class="portfolio-title">Технокряк</h3>
             <p class="portfolio-per">Веб-сайт</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/job2.png"
-            alt="Дизайн" 
-            width="370" 
-            height="294">
+            <img src="./images/job2.png" alt="Дизайн" width="370" height="294">
             <h3 class="portfolio-title" lang="en">Постер New Orlean vs Golden Star</h3>
             <p class="portfolio-per">Дизайн</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/job3.png" 
-            alt="ресторан" 
-            width="370" 
-            height="294">
+            <img src="./images/job3.png" alt="ресторан" width="370" height="294">
             <h3 class="portfolio-title" lang="en">Ресторан Seafood</h3>
             <p class="portfolio-per">Приложение</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/job4.png" 
-            alt="проект" 
-            width="370" 
-            height="294">
+            <img src="./images/job4.png" alt="проект" width="370" height="294">
             <h3 class="portfolio-title" lang="en">Проект Prime</h3>
             <p class="portfolio-per">Маркетинг</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/job5.png" 
-            alt="проект" 
-            width="370" 
-            height="294">
+            <img src="./images/job5.png" alt="проект" width="370" height="294">
             <h3 class="portfolio-title" lang="en">Проект Boxes</h3>
             <p class="portfolio-per">Приложение</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/job6.png" 
-            alt="веб-сайт" 
-            width="370" 
-            height="294">
+            <img src="./images/job6.png" alt="веб-сайт" width="370" height="294">
             <h3 class="portfolio-title" lang="en">Inspiration has no Borders</h3>
             <p class="portfolio-per">Веб-сайт</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/job7.png" 
-            alt="издание" 
-            width="370" 
-            height="294">
+            <img src="./images/job7.png" alt="издание" width="370" height="294">
             <h3 class="portfolio-title" lang="en">Издание Limited Edition</h3>
             <p class="portfolio-per">Дизайн</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/job8.png" 
-            alt="проект" 
-            width="370" 
-            height="294">
+            <img src="./images/job8.png" alt="проект" width="370" height="294">
             <h3 class="portfolio-title" lang="en">Проект LAB</h3>
             <p class="portfolio-per">Маркетинг</p>
         </li>
         <li class="portfolio-item">
-            <img src="./images/job9.png" 
-            alt="приложение"
-             width="370" 
-            height="294">
+            <img src="./images/job9.png" alt="приложение" width="370" height="294">
             <h3 class="portfolio-title" lang="en">Growing Business</h3>
             <p class="portfolio-per">Приложение</p>
         </li>
     </ul>
 </section>
+</main>
+
 <footer class="footer-address">
     <address class="address">
         <ul class="list footer-list">
-            <a class="link footer-logo"  href="/">WebStudio</a>
+            <a class="link footer-logo" href="/">
+                <span lang="en" class="footer-logo-web">Web</span>
+                <span lang="en" class="footer-logo-studio">Studio</span>
+            </a>
             <li class="footer-item">
-                <a class="link footer-address" href="https://goo.gl/maps/559JVEKqnvfDjo5R9" target="_blank" rel="noopener noreferrer">
+                <a class="link address-foot" href="https://goo.gl/maps/559JVEKqnvfDjo5R9" target="_blank" rel="noopener noreferrer">
                     г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li class="footer-item">
-                <a class="link" href="mailto:info@example.com">info@example.com</a>
+                <a class="link footer-mail" href="mailto:info@example.com">info@example.com</a>
             </li>
-            <li class="link footer-mail">
+            <li class="footer-item">
                 <a class="link footer-tel" href=tel:+380991111111">+38 099 111 11 11</a>
             </li>
         </ul>
